# system-interface

./: .travis.yml  CODE_OF_CONDUCT.md  COPYRIGHT  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
src/: lib.rs
src/fs/: fd_flags.rs  file_io_ext.rs  mod.rs
src/io/: io_ext.rs  is_read_write.rs  is_terminal.rs  mod.rs  peek.rs  read_ready.rs
tests/: allocate.rs  append.rs  fd_flags.rs  is_read_write.rs  is_terminal.rs  live_rename.rs  peek.rs  read_ready.rs  read_to_end.rs  vectored_at.rs
tests/sys_common/: io.rs  mod.rs
