[package]
name = "system-interface"
version = "0.20.1-alpha.0"
description = "Extensions to the Rust standard library"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
keywords = ["api", "network", "file"]
categories = ["filesystem", "network-programming", "os"]
repository = "https://github.com/bytecodealliance/system-interface"
edition = "2018"
exclude = ["/.github"]

[dependencies]
async-std = { version = "1.10.0", optional = true }
bitflags = "1.2.1"
cap-std = { version = "0.25.0", optional = true }
cap-async-std = { version = "0.25.0", optional = true }
char-device = { version = "0.13.0", optional = true }
os_pipe = { version = "1.0.0", optional = true }
socketpair = { version = "0.16.0", optional = true }
io-lifetimes = { version = "0.7.0", default-features = false }
ssh2 = { version = "0.9.1", optional = true }
socket2 = { version = "0.4.0", optional = true }

[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.35.6", features = ["fs", "net", "termios"] }

[target.'cfg(windows)'.dependencies]
atty = "0.2.14"
cap-fs-ext = "0.25.0"
winx = "0.33.0"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.36.0"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Networking_WinSock",
]

[dev-dependencies]
cap-fs-ext = "0.25.0"
cap-tempfile = "0.25.0"
cap-std = "0.25.0"
tempfile = "3.2.0"
atty = "0.2.14"

[features]
default = []
cap_std_impls = ["cap-std"]
cap_async_std_impls = ["async-std", "cap-async-std", "io-lifetimes/async-std"]
cap_std_impls_fs_utf8 = ["cap-std/fs_utf8"]
cap_async_std_impls_fs_utf8 = ["async-std", "cap-async-std/fs_utf8"]
use_os_pipe = ["os_pipe", "io-lifetimes/os_pipe"]
use_socket2 = ["socket2", "io-lifetimes/socket2"]
